# llm_sps

./: .gitignore  Dockerfile  README.md  gemini_sps.py  gemini_sps2.py  graph_gen.py  llm_sps.py  pyproject.toml  sps_visualization_functions.py
result/20240925_155832/: agent_data.csv  experiment_parameters.json
result/20240925_162223/: agent_data.csv  experiment_parameters.json
result/20240925_162557/: agent_data.csv  experiment_parameters.json
result/20240925_163814/: agent_data.csv  experiment_parameters.json
result/20240925_164952/: agent_data.csv  experiment_parameters.json
result/20240926_105514/: agent_data.csv  experiment_parameters.json
result/20240926_133258/: agent_data.csv  experiment_parameters.json
result/20240926_133522/: agent_data.csv  experiment_parameters.json
result/20240926_133759/: agent_data.csv  experiment_parameters.json
result/20240926_133950/: agent_data.csv  experiment_parameters.json
result/20240926_134047/: agent_data.csv  experiment_parameters.json
result/20240926_142445/: agent_data.csv  experiment_parameters.json
result/20240926_155913/: agent_data.csv  experiment_parameters.json
result/20240926_182132/: agent_data.csv  experiment_parameters.json
result/20240926_194606/: agent_data.csv  experiment_parameters.json
result/20240926_204604/: agent_data.csv  experiment_parameters.json
result/20240926_214322/: agent_data.csv  experiment_parameters.json
result/20240926_235434/: agent_data.csv  experiment_parameters.json
result/20240927_003158/: agent_data.csv  (+1 more)
sps_simulation_20240919_022208/: agent_data.csv
(+41 files in other folders)
