[tool.poetry]
name = "llm_sps"
version = "0.1.0"
description = "Social Particle Swarm model (SPS model) with LLM"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21"
pandas = "^1.3"
matplotlib = "^3.4"
seaborn = "^0.11"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"